--- a/style.css
+++ b/style.css
@@ -111,3 +111,23 @@ button:nth-child(2):hover{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+.design .circle{
+    aspect-ratio: 1;
+    position: absolute;
+    border-radius: 50%;
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+}
+.circle:nth-child(1){
+    background:linear-gradient(90deg , transparent 50%, #262525 50%);
+    width: 30rem;
+
+
+}
+
+.circle:nth-child(2){
+    background: white;
+    width: 30rem;
+
+}
