--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1rem;
-    color: #fff
+    color: #fff;
+    position: relative;
 }
 .left-container, .right-container{
     height: 100vh;
@@ -42,7 +43,7 @@
 
 }
 .right-container{
-    background: #3877ff;
+    background: linear-gradient(-45deg,  #3877ff, #262525 70%);
     width: 30%;
 
 }
@@ -121,13 +122,34 @@ button:nth-child(2):hover{
 }
 .circle:nth-child(1){
     background:linear-gradient(90deg , transparent 50%, #262525 50%);
-    width: 30rem;
-
-
+    width: 38rem;
 }
 
 .circle:nth-child(2){
     background: white;
     width: 30rem;
+    background-image: url("./image/download.png") ;
+    background-repeat: no-repeat;
+    border: .1rem solid white;
+    background-size: 100%;
+    box-shadow: 0 0 1rem #fff, inset 0 0 1rem #fff, 0 0 2rem #3877ff, inset 0 0 2rem #3877ff,
+    0 0 4rem #3877ff ,inset 0 0 2rem #3877ff;
+    
+}
+.navlist a::after{
+    content: "";
+    position: absolute;
+    background: #fff;
+    width: 100%;
+    height: .1rem;
+    left:0;
+    bottom: -5px;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform .5s;
 
+}
+.navlist li a:hover::after{
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
